--- a/weatherForecast/.env
+++ b/weatherForecast/.env
@@ -1,3 +1,7 @@
-API_KEY=acc11b32b5bfef01584277052ae820ce
-BASE_URL=https://api.openweathermap.org/data/2.5/
+OPEN_WEATHER_API_KEY=acc11b32b5bfef01584277052ae820ce
+CURRENT_WEATHER_URL=https://api.openweathermap.org/data/2.5/
+HISTORICAL_WEATHER_URL=https://history.openweathermap.org/data/2.5/history/
 FLAG_URL=https://flagcdn.com/48x36/
+NOAA_API_TOKEN=AnegBZMoUODdZQQXxnujnEOrSfJjIHbK
+NOAA_API_BASE_URL=https://www.ncdc.noaa.gov/cdo-web/api/v2
+NOAA_DATASET_ID=GHCND
